<resources>
    <string name="app_name">experiment4</string>
    <string name="title_activity_app_store">AppStoreActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_app_store_home">AppStoreHomeActivity</string>
    <string name="application">应用</string>
    <string name="home_page">主页</string>
    <string name="explore">探索</string>
    <string name="game">游戏</string>
    <string name="mine">我的</string>
    <string name="recommend">推荐</string>
    <string name="app_list">应用榜</string>
    <string name="game_list">游戏榜</string>
    <string name="classify">分类</string>
    <string name="nickname">未登录</string>
    <string name="userid">用户ID</string>
    <string name="home">首页</string>
    <string name="login_home">登录主页</string>
    <string name="register_home">注册主页</string>
    <string name="music_play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="next_music">下一首</string>
    <string name="music_player">音乐播放器</string>
    <string name="music_detail">音乐详情</string>

</resources>
