<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_page" />

    <item
        android:id="@+id/navigation_application"
        android:icon="@drawable/ic_local_mall_black_24dp"
        android:title="@string/application" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/game" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/mine" />

</menu>
