<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.experiment4.MusicActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonPlay"
            android:text="@string/music_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:id="@+id/buttonPause"
            android:text="@string/pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:id="@+id/buttonStop"
            android:text="@string/stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
        <Button
            android:id="@+id/buttonNext"
            android:text="@string/next_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
