<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:background="#03A9F4"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:text="@string/home" />


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/portrait" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:hint="@string/nickname"
            android:gravity="center" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:hint="@string/userid"
            android:gravity="center" />


        <LinearLayout
            android:id="@+id/ll_login_and_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginLeft="70dp"
                android:background="#03A9F4"
                android:textColor="@android:color/white"
                android:text="登录" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_marginLeft="120dp"
                android:background="#03A9F4"
                android:textColor="@android:color/white"
                android:text="注册" />
        </LinearLayout>



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>